<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pvtbox</string>
    <string name="service_description">Pvtbox Service</string>
    <string name="app_syncing">Pvtbox is syncing…</string>
    <string name="app_synced">Pvtbox is synced</string>
    <string name="app_paused">Pvtbox is paused…</string>
    <string name="app_connecting">Pvtbox is connecting to servers…</string>
    <string name="app_is_free">Pvtbox license is Free…</string>
    <string name="app_sync_disabled">Syncing across devices disabled</string>
    <string name="app_upgrade_license">Please upgrade your license.</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="self">%s (You)</string>
    <string name="password_must_equals">Password not equals with confirmation</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="empty_password">Password can not be empty</string>
    <string name="empty_host">Self-hosted server address can\'t be empty</string>
    <string name="write_and_read_ext_storage">Please provide permission to access device storage.\nApplication won\'t work without it.</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="ago">ago</string>
    <string name="year">years</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="new_folder">New folder</string>
    <string name="add_photo_video">Add Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_files">Add Files</string>
    <string name="send_file">Send File</string>
    <string name="properties">Properties</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="crete_offline_copy">Create offline copy</string>
    <string name="open_with">Redirect to…</string>
    <string name="share">Share</string>
    <string name="collaboration_settings">Collaboration Settings</string>
    <string name="quit_collaboration">Quit collaboration</string>
    <string name="remove_user">Remove user</string>
    <string name="get_link">Get link</string>
    <string name="current_devices">Current Devices: %d/%d</string>
    <string name="space_in_use">In use:</string>
    <string name="synced_status">Synced</string>
    <string name="syncing_status">Syncing</string>
    <string name="wiped_status">Wiped</string>
    <string name="power_off_status">PowerOff</string>
    <string name="paused_status">Paused</string>
    <string name="indexing_status">Indexing</string>
    <string name="logged_out_status">Logged out</string>
    <string name="connecting_status">Connecting</string>
    <string name="mb_in_s">MB/s</string>
    <string name="kb_in_s">KB/s</string>
    <string name="Gb_in_s">GB/s</string>
    <string name="b">B</string>
    <string name="kb">KB</string>
    <string name="mb">MB</string>
    <string name="gb">GB</string>
    <string name="tb">TB</string>
    <string name="action_sort_alphabetically">Sort by A-b-c</string>
    <string name="action_sort_descending_date">Sort by date</string>
    <string name="select_all">Select all</string>
    <string name="cancel_selection">Cancel selection</string>
    <string name="download_to">Save to Downloads</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="image_viewer_size">Size:</string>
    <string name="image_viewer_type">Type:</string>
    <string name="image_viewer_files">Files:</string>
    <string name="image_viewer_permission">Permission:</string>
    <string name="image_viewer_added">Added:</string>
    <string name="image_viewer_modified">Modified:</string>
    <string name="recently_added">Recently added</string>
    <string name="recently_modified">Recently modified</string>
    <string name="image_viewer_path">Path:</string>
    <string name="account_type">Account type:</string>
    <string name="update_to_pro">Update to PRO</string>
    <string name="automatic_upload" formatted="false">Automatically add\u0020</string>
    <string name="photos_from_camera" formatted="false">photos and videos from camera</string>
    <string name="protect_your_privacy">Protect your privacy\u0020</string>
    <string name="with_passcode">with passcode</string>
    <string name="wifi_only">Update data via wifi only</string>
    <string name="wifi_and_cellular">Update data via Wi-Fi and cellular</string>
    <string name="logout">LOGOUT</string>
    <string name="logout_node">Log out</string>
    <string name="logout_node_in_progress">Log out in progress…</string>
    <string name="logout_and_wipe_node">Log out and wipe</string>
    <string name="logout_and_wipe_node_in_progress">Wipe in progress…</string>
    <string name="enter_colleague_email"><i>Colleague email</i></string>
    <string name="send">Send</string>
    <string name="get_link_set_date">Set expiry date</string>
    <string name="get_link_set_password">Set password</string>
    <string name="create_link">CREATE LINK</string>
    <string name="remove">Remove</string>
    <string name="colleagues_list">Colleagues list</string>
    <string name="add_colleague">Add colleague</string>
    <string name="can_view">Can view</string>
    <string name="can_edit">Can edit</string>
    <string name="status">Status:\u0020</string>
    <string name="can">Can</string>
    <string name="owner">Owner</string>
    <string name="loading"><i>Loading…</i></string>
    <string name="title_settings">Settings</string>
    <string name="title_my_devices">My Devices</string>
    <string name="title_get_link">Get link</string>
    <string name="title_support">Contact us</string>
    <string name="enter_password">Enter password:</string>
    <string name="enter_new_name">Please, enter new name</string>
    <string name="enter_new_folder_name">Please, enter name of new folder</string>
    <string name="yes">Yes</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign up for free</string>
    <string name="all_files">All Files</string>
    <string name="recent_files">Recent files</string>
    <string name="offline_file">Offline files</string>
    <string name="downloads">Downloads</string>
    <string name="my_devices">My devices</string>
    <string name="faq">FAQ</string>
    <string name="support">Contact us</string>
    <string name="welcome_to_pb">Welcome.\nTo add files into your Pvtbox secured sync folder on this device, tap \"+\" icon located in the lower right corner.</string>
    <string name="nothing_find">Nothing found.</string>
    <string name="free_licence_trial">Free 14-days trial</string>
    <string name="free_licence">Free</string>
    <string name="pro_licence">Pro account</string>
    <string name="business_licence">Business account</string>
    <string name="business_admin_licence">Business (Admin) account</string>
    <string name="unknown_license">Unknown license</string>
    <string name="automatic_camera_update_text">All nodes offline.\n Your gallery will be synced when there is at least one online node</string>
    <string name="Added">Added</string>
    <string name="Modified">Modified</string>
    <string name="select">Selected: %d</string>
    <string name="action_select">Select</string>
    <string name="password_length_error">Password length must be at least 6 character</string>
    <string name="password_invalid_symbols_error">For the password you can use only letters of the Latin alphabet, digits and symbols !@#$%^&#38;*()_+-=[]{};:"'\|?/.,&#60;&#62;</string>
    <string name="network_error">Network error, please try again later</string>
    <string name="download_network_error">Network error, will try to download later</string>
    <string name="text_policy_confirm">I have read and accept\u0020</string>
    <string name="please_confirm_rule_and_policy">Please confirm Rules and Privacy Policy</string>
    <string name="rules">Rules</string>
    <string name="and">\u0020and\u0020</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="clear_file">Keep local files on device?</string>
    <string name="keep">Keep</string>
    <string name="clear_all">Clear all</string>
    <string name="empty_folder">Empty folder</string>
    <string name="can_not_copy_folder_to_self">You can\'t copy folder \"%s\" to itself</string>
    <string name="can_not_move_folder_to_self">You can\'t move folder \"%s\" to itself</string>
    <string name="can_not_move_folder_in_same_folder">You can\'t move folder \"%s\" to same location</string>
    <string name="can_not_move_file_in_same_folder">You can\'t move file \"%s\" to same location</string>
    <string name="file_with_name_already_exist">File with name \"%s\" already exist</string>
    <string name="folder_with_name_already_exist">Folder with name \"%s\" already exist</string>
    <string name="this_file_not_actual_do_want_download_new">The current file is not up-to-date.\nAll changes you made won\'t be synced!\n\nDo you want to download a new version?</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="camera_folder_deleted_title">Camera folder was deleted</string>
    <string name="camera_folder_deleted_message">Camera import cancelled.\nYou can switch \"Automatically add photos and videos from camera\" in Settings to continue syncing your camera with other devices</string>
    <string name="do_you_want_delete_folder_private_box">Pvtbox folder found on your device.</string>
    <string name="add_sync">Add files to sync</string>
    <string name="delete_folder">Delete folder</string>
    <string name="remind_password">Remind Password</string>
    <string name="i_all_ready_have_pb">I already have a Pvtbox account</string>
    <string name="i_do_not_have_pb">I don\'t have a Pvtbox account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="please_wait">Please wait</string>
    <string name="you_can_not_download_file_in_pb_directory">You can\'t download file into Pvtbox secured sync folder</string>
    <string name="disk_space_error">Not enough disk space! Sync and downloads may not work!</string>
    <string name="create_firstly">You should create link firstly</string>
    <string name="error_offline_inappropriate">No appropriate offline state to change</string>
    <string name="start_import_camera" formatted="false">Importing camera…</string>
    <string name="more_menu">More…</string>
    <string name="insert_share_link">Insert share link</string>
    <string name="import_camera">Import camera</string>
    <string name="notifications">Notifications</string>
    <string name="content_description_send">send</string>
    <string name="content_description_create_folder">create folder</string>
    <string name="content_description_add_photo">add photo</string>
    <string name="content_description_take_photo">take photo</string>
    <string name="content_description_add_files">add files</string>
    <string name="content_description_import_camera">import camera</string>
    <string name="content_description_insert_link">insert link</string>
    <string name="content_description_get_link">get link</string>
    <string name="content_description_copy">copy</string>
    <string name="content_description_remove">remove</string>
    <string name="content_description_collaborate">collaborate</string>
</resources>