<?xml version="1.0" encoding="utf-8"?>
<!--
  
  Pvtbox. Fast and secure file transfer & sync directly across your devices. 
  Copyright © 2020  Pb Private Cloud Solutions Ltd. 
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/all_files"
            android:icon="@drawable/all_files_menu_icon"
            android:title="@string/all_files" />
        <item
            android:id="@+id/recent_files"
            android:icon="@drawable/recent_files_menu_icon"
            android:title="@string/recent_files" />
        <item
            android:id="@+id/offline_files"
            android:icon="@drawable/offline_files_menu_icon"
            android:title="@string/offline_file" />
        <item
            android:id="@+id/downloads"
            android:icon="@drawable/downloads_menu_icon"
            android:title="@string/downloads" />
        <item
            android:id="@+id/ni_notifications"
            android:icon="@drawable/bell"
            app:actionLayout="@layout/notifications_navigation_item"
            android:title="@string/notifications" />
        <item
            android:id="@+id/ni_devices"
            android:icon="@drawable/devices_menu_icon"
            android:title="@string/my_devices" />
        <item
            android:id="@+id/ni_settings"
            android:icon="@drawable/settings_menu_icon"
            android:title="@string/title_settings" />
    </group>


        <group android:checkableBehavior="single">
            <item
                android:id="@+id/ni_help"
                android:icon="@drawable/faq_menu_icon"
                android:title="@string/faq" />
            <item
                android:id="@+id/ni_support"
                android:icon="@drawable/support_menu_icon"
                android:title="@string/support" />
        </group>


</menu>
