<?xml version="1.0" encoding="utf-8"?>
<!--
  
  Pvtbox. Fast and secure file transfer & sync directly across your devices. 
  Copyright © 2020  Pb Private Cloud Solutions Ltd. 
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/get_link_text_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:padding="8dp"
        android:textIsSelectable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/get_link_send_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/send_link"
                android:contentDescription="@string/content_description_send" />

            <TextView
                android:layout_marginLeft="8dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:background="@color/white" />
        <LinearLayout
            android:id="@+id/get_link_copy_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/copy_link"
                android:contentDescription="@string/content_description_copy" />

            <TextView
                android:layout_marginLeft="8dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:background="@color/white" />
        <LinearLayout
            android:id="@+id/get_link_remove_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/remove_white"
                android:contentDescription="@string/content_description_remove" />

            <TextView
                android:layout_marginLeft="8dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>