<?xml version="1.0" encoding="utf-8"?>

<!--
  
  Pvtbox. Fast and secure file transfer & sync directly across your devices. 
  Copyright © 2020  Pb Private Cloud Solutions Ltd. 
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:id="@+id/action_send_files"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/action_send_files_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/send_file"
            android:visibility="visible"
            android:contentDescription="@string/content_description_send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/action_send_files_image"
            android:text="@string/send_file"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/white">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/iron"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/action_new_folder"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/action_new_folder_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/add_folder"
            android:visibility="visible"
            android:contentDescription="@string/content_description_create_folder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/action_new_folder_image"
            android:text="@string/new_folder"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/action_add_photo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/action_add_photo_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/add_photo"
            android:visibility="visible"
            android:contentDescription="@string/content_description_add_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/action_add_photo_image"
            android:text="@string/add_photo_video"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/action_take_photo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/action_take_photo_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/take_photo"
            android:visibility="visible"
            android:contentDescription="@string/content_description_take_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/action_take_photo_image"
            android:text="@string/take_photo"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/action_add_files"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/action_add_files_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/add_files"
            android:visibility="visible"
            android:contentDescription="@string/content_description_add_files" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/action_add_files_image"
            android:text="@string/add_files"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/action_import_camera"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/action_import_camera_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/sync"
            android:visibility="visible"
            android:contentDescription="@string/content_description_import_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/action_import_camera_image"
            android:text="@string/import_camera"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/action_import_camera_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:theme="@style/SCBSwitch" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/white">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/iron"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/action_insert_link"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/action_insert_link_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/get_link"
            android:visibility="visible"
            android:contentDescription="@string/content_description_insert_link" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/action_insert_link_image"
            android:text="@string/insert_share_link"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />
    </RelativeLayout>
</LinearLayout>
